# agentic-research

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: research_agent.py
backend/app/models/: schemas.py
backend/app/routers/: explain.py  research.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/.nodeenv/Scripts/: Activate.ps1  activate.bat
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/actions/: explain.ts  research.ts
frontend/src/components/canvas/: CameraController.tsx  CanvasErrorBoundary.tsx  KnowledgeNode.tsx  NodeConnections.tsx  ResearchCanvas.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: FallbackView.tsx  JITExplanation.tsx  NodeDetailPanel.tsx  SearchBar.tsx
frontend/src/hooks/: useCameraTransition.ts  useResearchAgent.ts  useTextSelection.ts
frontend/src/lib/: api.ts  graph.ts
frontend/src/types/: index.ts
